cluster/apps/networking/external-services/homeassistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app homeassistant
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: traefik
  annotations:
  cert-manager.io/cluster-issuer: "letsencrypt-production"
  hajimari.io/enable: "true"
  hajimari.io/icon: "house"
  traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
  traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflare-only@kubernetescrd"
  rules:
    - host: &host "homeassistant.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 8123
  tls:
    - hosts:
        - *host
      secretName: "homeassistant-tls"
